--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".LogoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity android:name=".FrontPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -33,8 +42,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -59,14 +66,15 @@
         <activity android:name=".FirebaseUIActivity" />
         <activity android:name=".EmailPasswordActivity" />
         <activity android:name=".GoogleSignInActivity" />
-        <activity android:name=".SearchItemActivity" />
+        <activity
+            android:name=".SearchItemActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".PhotoGallery" />
         <activity
             android:name=".FullScreenImageActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_full_screen_image"
-            android:theme="@style/FullscreenTheme"></activity>
-        <activity android:name=".FullScreenImageActivity$ZoomActivity" />
+            android:theme="@style/FullscreenTheme" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
